# videoFrameSampler

./: .gitignore  README.md  build_release.bat  pyproject.toml  requirements.txt
.github/workflows/: build-exe.yml
docs/: dev_test_cycles.md  feature_validation_matrix.md  release_routine.md  specification.md
src/: diagnose_cli.py
src/core/: __init__.py  frame_extractor.py  models.py
src/ui/: __init__.py  main_window.py
tests/: __init__.py  generate_test_video.py  quality_eval_model.py  test_frame_extractor.py  validate_extraction_outputs.py
