[project]
name = "videoframesampler"
version = "2.0.0"
description = "Offline GUI app for deterministic video frame extraction."
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "numpy",
    "PySide6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
